src/main/manifests/aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lamp
  name: lamp
  namespace: lamp
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: admin
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: lamp
