src/main/manifests/aks/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lamp-http
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
  namespace: lamp
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lamp
                port: 
                  name: "http"
